# crypto-risk-api

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 78c40ee3e700_create_initial_tables.py
app/: worker.py
app/api/: auth.py  health.py  health.py.save  holdings.py  portfolio.py  risk.py
app/core/: cache.py  config.py  database.py  dependencies.py  middleware.py  security.py
app/models/: __init__.py  base.py  holding.py  portfolio.py  price_snapshot.py  user.py
app/repositories/: holding_repository.py  portfolio_repository.py  user_repository.py
app/schemas/: holding.py  portfolio.py  price_snapshot.py  user.py
app/services/: health_service.py  holding_service.py  portfolio_service.py  price_service.py  risk_service.py  user_service.py
docs/: architecture.md  erd.md  threat-model.md
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_health.py  test_portfolio.py  test_risk_endpoints.py  test_risk_service.py
