[project]
name = "cryptorisk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.138.2",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]
