[project]
name = "cryptorisk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.2",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pytest>=8.2,<9",
    "pytest-asyncio==0.23.8",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
